refactor: swagger for employee  added
