# swagger/swagger.json
@@ -67,8 +67,187 @@
             }
           ]
         }
+      },
+      "/empPayroll": {
+        "post": {
+          "tags": [],
+          "description": "",
+          "parameters": [
+            {
+              "name": "Enter new employee",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Employee added"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [{
+            "JWT": []
+        }]
+        }
+      },
+      "/getEmpPayroll": {
+        "get": {
+          "tags": [],
+          "description": "",
+          "parameters": [],
+          "responses": {
+            "200": {
+              "description": "successfull"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "JWT": []
+            }
+          ]
+        }
+      },
+      "/getEmpPayrollByID/{employeeId}": {
+        "get": {
+          "tags": [],
+          "description": "",
+          "parameters": [
+            {
+              "name": "employeeId",
+              "in": "path",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "successfull"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "JWT": []
+            }
+          ]
+        }
+      },
+      "/UpdateEmpPayroll/{employeeId}": {
+        "put": {
+          "tags": [],
+          "description": "",
+          "parameters": [
+            {
+              "name": "employeeId",
+              "in": "path",
+              "required": true,
+              "type": "string"
+            },
+            {
+              "name": "updated employee",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/User"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "successfull"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "JWT": []
+            }
+          ]
+        }
+      },
+      "/deleteEmpPayroll/{employeeId}": {
+        "delete": {
+          "tags": [],
+          "description": "",
+          "parameters": [
+            {
+              "name": "employeeId",
+              "in": "path",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "successfull"
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "JWT": []
+            }
+          ]
+        }
       }
   },
+  "securityDefinitions": {
+    "JWT": {
+      "type": "apiKey",
+      "name": "token",
+        "in": "headers"
+    }
+  },  
   "definitions":{
     "User": {
         "type": "object",
@@ -98,5 +277,5 @@
           }
         }
       }
-    }
+  }  
 }
